# pylmtic

./: .gitignore  README.md  bump_version.py  pyproject.toml  test.py  tests.sh
pylmtic/: __init__.py  core.py
tests/: test_core.py  test_live.py
